--- a/index.html
+++ b/index.html
@@ -1,40 +1,30 @@
 <!DOCTYPE html>
-
-<html lang="en-us">
-
-  <head>
-
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>Totally Trivial Trivia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    
+   <div class="container">
 
-    <!-- CSS Reset Sheet -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+        <button id="start-button">Click Here to Start the Game</button>
 
-    <!-- Our own CSS Sheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Geo" rel="stylesheet" type="text/css">
-
-  </head>
-
-  <body>
-
-    <div id="wrapper">
-      <h1>Totally Trivial Trivia!</h1>
-      <div id="sub-wrapper">
-        <div id="quiz-area">
-          <button id="start">Start</button>
+        <div class="content">
+            <h2 id="test_status"></h2>
+            <div id="test"></div>
         </div>
-      </div>
-    </div>
 
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
-
-  </body>
-
+        <div id="timer"></div>
+        
+   </div>
+   <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    <script src="./assets/js/app.js"></script>
+</body>
 </html>
-
